Fix layout shift

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -10,10 +10,15 @@
   display: flex;
   align-items: center;
 }
+.footer__social li {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+}
 .footer__social a {
   font-size: 2.5rem;
   color: grey;
-  margin-right: 20px;
   transition: color 100ms;
 }
 .footer__social a:hover {
